set(MAIN_TEST_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(TEST_SOLVERCH cbc)

add_subdirectory(divers)
add_subdirectory(connexite)
add_subdirectory(curatif)
add_subdirectory(effacements)
add_subdirectory(hvdc)
add_subdirectory(td)
add_subdirectory(groupes)
add_subdirectory(load_flow)
add_subdirectory(pertes)
add_subdirectory(variables_couplees)
add_subdirectory(seuils)
add_subdirectory(variantes_regroupees)
add_subdirectory(overload)
add_subdirectory(LODF_PTDF)
